--- a/frontend/src/styles/components/block/chatHeader.scss
+++ b/frontend/src/styles/components/block/chatHeader.scss
@@ -17,6 +17,7 @@ $tab : 520px;
     display: flex;
     justify-content: space-between;
     padding: 8px 24px;
+    border-bottom: solid 1px rgba($color: #000000, $alpha: 0.3);
 
     .header-title {
         a {
