apply scss in pages channel

--- a/frontend/src/styles/components/atoms/searchWindow.scss
+++ b/frontend/src/styles/components/atoms/searchWindow.scss
@@ -19,9 +19,10 @@ $tab : 520px;
     align-items: center;
     width: 420px;
     height: 21px;
-    border: 1px solid black;
+    border: 1px solid rgb(255, 255, 255);
     border-radius: 16px;
     padding: 5px 10px;
+    background-color: white;
 
     .search-form {
         width: 380px;
