--- a/frontend/src/styles/components/block/chatHeader.scss
+++ b/frontend/src/styles/components/block/chatHeader.scss
@@ -17,7 +17,8 @@ $tab : 520px;
     display: flex;
     justify-content: space-between;
     padding: 8px 24px;
-    border-bottom: solid 1px rgba($color: #000000, $alpha: 0.3);
+    border-bottom: solid 1px rgba($color: #ffffff, $alpha: 0.5);
+    background-color: #111116;
 
     .header-title {
         a {
@@ -26,7 +27,7 @@ $tab : 520px;
             font-size: 28px;
             font-family: cursive;
             text-decoration: none;
-            background: linear-gradient( to right,  rgba(69,179,224,1) 25%, rgba(102,51,153,1) 75% );
+            background: linear-gradient( to right,  rgb(240, 195, 206) 25%, rgb(189, 221, 194) 75% );
             -webkit-background-clip: text;
             color: transparent;
         }
