--- a/frontend/src/styles/layouts/chats/channel.scss
+++ b/frontend/src/styles/layouts/chats/channel.scss
@@ -22,13 +22,9 @@
                 }
                 .content {
                     margin: 5px 20px;
-                    box-sizing: border-box;
-                    width: 90%;
-                    height: 45px;
-                    background-color: white;
-                    color: black;
-                    border-radius: 5px;
-                    font-size: 16px;
+                    color: white;
+                    font-size: 15px;
+                    opacity: 0.5;
                 }
             }
 
